[gd_scene load_steps=2 format=3 uid="uid://bn8k5utg6x354"]

[ext_resource type="Script" path="res://Scenes/UI/BuildingUpgradeUi.gd" id="1_6qc8o"]

[node name="Upgrade_UI" type="Control"]
process_mode = 3
z_index = 1
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_6qc8o")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 245.0
offset_bottom = 313.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 64

[node name="UpgradeName" type="Label" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Building"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16

[node name="CostTitle" type="Label" parent="Panel/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Cost:"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16

[node name="Cost" type="Label" parent="Panel/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0.339239, 0.273092, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer4" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -122.5
offset_top = -31.0
offset_right = 122.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Buy" type="Button" parent="Panel/MarginContainer4"]
layout_mode = 2
mouse_filter = 1
text = "Buy"
metadata/_edit_use_anchors_ = true

[node name="Close" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.812245
anchor_top = 0.0255591
anchor_right = 0.97551
anchor_bottom = 0.153355
offset_left = -1.52588e-05
mouse_filter = 1
text = "X"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Panel/MarginContainer4/Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="Panel/Close" to="." method="_on_close_pressed"]
